--- a/Lyrics4Itunes/Lyrics4Itunes-Info.plist
+++ b/Lyrics4Itunes/Lyrics4Itunes-Info.plist
@@ -40,6 +40,8 @@
 	</dict>
 	<key>CFPlugInUnloadFunction</key>
 	<string></string>
+	<key>LSBackgroundOnly</key>
+	<false/>
 	<key>NSHumanReadableCopyright</key>
 	<string>Copyright © 2013 subo. All rights reserved.</string>
 </dict>
